# rustwi

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
database/: initial.sql
database/setup/: initial.sql
src/: database.rs  lib.rs  main.rs
src/controllers/: root.rs  tweets.rs
src/entities/: tweet.rs
src/repositories/: tweets.rs
src/repositories_impl/: tweets.rs
src/services/: tweets.rs
src/views/: home.rs
src/views/partial/: tweet.rs
templates/: _tweet.html  base.html  home.html
